apps/jellyfin/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellyfin
  namespace: apps
  labels:
    app: jellyfin
spec:
  selector:
    app: jellyfin
  ports:
    - name: http
      port: 8096
      targetPort: 8096
      nodePort: 30096
      protocol: TCP
  type: NodePort
